# pyDPQCQP

./: .gitignore  CMakeLists.txt  README.md  setup.py
cmake/: FindCplex.cmake
pyDPQCQP/: DPQCQP.py
pydpqcqp/: DPQCQP.py  __init__.py  _helpers.py
src/: QCQP.cpp  QCQP.hpp  python_binding.cpp
